05-16-13
. fixed bug where callback could be lost during unsubscribe
. added .ready() and .unsubscribe() to SECURE

05-10-13
. allowed `restore:false` to prevent catchup on channel traversal/changes.

05-09-13
. bringing all js distros to 3.4.5

04-30-13
. fixed double susbscribe race condition bug
. fixed issue on ie when detecting best transport

04-16-13
. fixed ssl leave issue on firefox
. bumping all clients to new 3.4.4
. added new trivial phonegap demo

commit ebfb9fae11d235b509eb592c944b46fe81474108
Author: Stephen L. Blum <stephen@pubnub.com>
Date:   Fri Feb 15 20:20:47 2013 -0800

    many small updates to README in JavaScript.

commit b703fd17b0751f5e5c5026870c9ef681a15ffc9d
Author: Stephen L. Blum <stephen@pubnub.com>
Date:   Fri Feb 15 19:50:35 2013 -0800

    reduced keepalive description in the readme.

commit 09196772be90d2ea5face2799f635d3ad6a0090b
Author: Stephen L. Blum <stephen@pubnub.com>
Date:   Fri Feb 15 19:49:20 2013 -0800

    added more detail to Windowing.

commit b966edff0a337379c3d12e2743b8129b2086ed21
Author: Stephen L. Blum <stephen@pubnub.com>
Date:   Fri Feb 15 19:45:58 2013 -0800

    added Replay description.

commit 7b8890f3168f6d0087909c3d5b1b942d59d2d71f
Author: Stephen L. Blum <stephen@pubnub.com>
Date:   Fri Feb 15 19:44:24 2013 -0800

    Updated introduction on README.

commit e826e980334f5088aef8f3d7449a38a1a3106719
Author: Stephen L. Blum <stephen@pubnub.com>
Date:   Fri Feb 15 19:43:26 2013 -0800

    fixed Typo in readme doc for JavaScript 3.4.1

commit 79f1afd94e4c8e18793db820b2025ec61f5750d4
Author: Stephen Blum <blum.stephen@gmail.com>
Date:   Thu Feb 14 18:52:18 2013 -0800

    updated README.md for JavaScript typos and filling in missing details.

commit 2216190f98f4751d65608b863f23ba5cf4e9d477
Author: Stephen Blum <blum.stephen@gmail.com>
Date:   Thu Feb 14 15:13:43 2013 -0800

    fixed typos in README.md

commit 5bd6ead5417a9ccc6c3fcfe182c10a62a01193dc
Author: Stephen L. Blum <stephen@pubnub.com>